[package]
name = "rprobe"
version = "0.7.2"
edition = "2021"
license = "MIT"
authors = ["Volker Schwaberow <volker@schwaberow.de>"]
homepage = "https://github.com/vschwaberow/rprobe.git"
repository = "https://github.com/vschwaberow/rprobe.git"
description = "A simple tool to probe a remote host http or https connection"
keywords = ["rust", "network", "security", "network"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
strip = "symbols"
lto = true
codegen-units = 1
opt-level = "s"

[dependencies]
chrono = "0.4"
tokio = { version = "1", features = ["full"] }
clap = { version = "4.2.0", features = ["derive"] }
indicatif = { version = "0.17.8", features = ["rayon"] }
governor = "0.7.0"
reqwest = "0.12.8"
regex = "1.11.1"
log = "0.4.22"
futures = "0.3.31"
once_cell = "1.20.2"
colored = "3.0.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
# Other dependencies...
