[package]
name = "rprobe"
version = "0.9.0"
edition = "2021"
license = "MIT"
authors = ["Volker Schwaberow <volker@schwaberow.de>"]
homepage = "https://github.com/vschwaberow/rprobe.git"
repository = "https://github.com/vschwaberow/rprobe.git"
description = "A simple tool to probe a remote host http or https connection"
keywords = ["rust", "network", "security", "network"]
categories = ["command-line-utilities"]

[[bin]]
name = "rprobe"
path = "src/main.rs"

[lib]
name = "rprobe"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
strip = "symbols"
lto = true
codegen-units = 1
opt-level = "s"

[dependencies]
chrono = { version = "0.4", features = ["serde"] } # Added serde feature
tokio = { version = "1", features = ["full"] }
clap = { version = "4.2.0", features = ["derive"] }
indicatif = { version = "0.17.8", features = ["rayon"] }
governor = "0.7.0"
reqwest = { version = "0.12.8", features = ["blocking"] } # Added blocking feature
regex = "1.11.1"
aho-corasick = "1.1"
log = "0.4.22"
simple_logger = "5.0.0" # Added simple_logger
futures = "0.3.31"
once_cell = "1.20.2"
colored = "3.0.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
sha2 = "0.10.8"
tempfile = "3.10.1" # Added tempfile
thiserror = "1.0" # Error handling for plugins
url = "2.5" # URL parsing for desync scanner
rand = "0.8" # Random number generation for markers
tokio-rustls = "0.24" # TLS support for raw TCP connections
rustls = "0.21" # TLS implementation
webpki-roots = "0.25" # Root certificates for TLS
lru = "0.12" # LRU cache for bounded memory collections
# Storage layer dependencies
sled = { version = "0.34", features = ["compression"] } # Embedded database (alternative to RocksDB for simplicity)
bincode = "1.3" # Efficient binary serialization
dirs = "5.0" # Cross-platform directory paths
anyhow = "1.0" # Error handling
uuid = { version = "1.0", features = ["v4", "serde"] } # UUID generation

[dev-dependencies]
wiremock = "0.6"
mockito = "1.5"
tokio-test = "0.4"
serial_test = "3.1"
pretty_assertions = "1.4"
rstest = "0.23"
test-case = "3.3"
# Storage testing dependencies
assert_fs = "1.0" # Filesystem assertions for testing
predicates = "3.0" # Predicate combinators for tests
